# scnn

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  project.yml  run_docker.sh  setup_unity.sh
docker/: docker_build.sh  docker_run.sh
example/: CMakeLists.txt
example/mnist/: CMakeLists.txt  download.sh  mnist_example.c  mnist_sample.c
example/xor/: CMakeLists.txt  xor.c
include/: activation.h  blas.h  data.h  fc.h  layer.h  layers.h  loss.h  mat.h  net.h  nn_layer.h  nn_net.h  nn_trainer.h  random.h  scnn_blas.h  scnn_fc.h  scnn_layer.h  scnn_layers.h  scnn_loss.h  scnn_mat.h  scnn_net.h  scnn_sigmoid.h  scnn_softmax.h  sigmoid.h  softmax.h  trainer.h  util.h
include/impl/: scnn_layer_impl.h
src/: CMakeLists.txt  activation.c  blas.c  data.c  fc.c  layer.c  loss.c  mat.c  net.c  nn_layer.c  nn_net.c  nn_trainer.c  random.c  scnn_blas.c  scnn_fc.c  scnn_layer.c  scnn_loss.c  scnn_mat.c  scnn_net.c  scnn_sigmoid.c  scnn_softmax.c  sigmoid.c  softmax.c  trainer.c  util.c
test/: CMakeLists.txt  setup_unity.sh
test/cases/: test_activation.c  test_data.c  test_fc.c  test_layer.c  test_loss.c  test_mat.c  test_net.c  test_nn_layer.c  test_nn_net.c  test_nn_trainer.c  test_random.c  test_scnn_blas.c  test_scnn_fc.c  test_scnn_layer.c  test_scnn_loss.c  test_scnn_mat.c  test_scnn_net.c  test_scnn_sigmoid.c  test_scnn_softmax.c  test_sigmoid.c  test_softmax.c  test_trainer.c  test_util.c  test_utils.h
test/reference/: ref_impl.py
test/runner/: all_tests.c  test_data_runner.c  test_fc_runner.c  test_layer_runner.c  test_loss_runner.c  test_mat_runner.c  test_net_runner.c  test_random_runner.c  test_scnn_blas_runner.c  test_scnn_fc_runner.c  test_scnn_layer_runner.c  test_scnn_loss_runner.c  test_scnn_mat_runner.c  test_scnn_net_runner.c  test_scnn_sigmoid_runner.c  test_scnn_softmax_runner.c  test_sigmoid_runner.c  test_softmax_runner.c  test_trainer_runner.c  test_util_runner.c
